Make the styling consistent for all pages

--- a/index.html
+++ b/index.html
@@ -68,19 +68,17 @@
         style="opacity:1;fill:#ffffff;fill-opacity:0.2;stroke:none;stroke-width:0.28266668;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
    </g>
  </svg>
- 
     <nav>
 
         <h1 class="title">PaulW.XYZ</h1>
         <div class="fuzzynav">
             <input class="search" type="text" id="search" placeholder="Navigate to ...">
             <div id="results" class="results"></div>
-
         </div>
 
     </nav>
     <footer>
-        <a href="https://github.com/lambdapaul/">Hosted on GitHub</a>
+        <a href="https://github.com/lambdapaul/www">Hosted on GitHub</a>
         &copy; 2021 Paul W.
     </footer>
     <script src="/scripts/fuzzynav.js"></script>
