--- a/pages/index.html
+++ b/pages/index.html
@@ -4,17 +4,16 @@
 	<meta charset="UTF-8">
 	<title>PaulW.XYZ / Pages</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/persia.css">
 </head>
 <body>
-<h1><a href="/">PaulW.XYZ</a> / Pages</h1>
-<ul>
-	<li><a href="/pages/grade-calc/">Grade Calculator</a></li>
-</ul>
-<hr>
-<ul type="none">
-<li><a href="resources">Resources</a></li>
-<li><a href="https://github.com/lambdapaul/pages">GitHub</a></li>
-</ul>
-
+	<nav>
+		<h1 class="title"><a href="/">PaulW.XYZ</a> / Pages</h1>
+	</nav>
+	<div class="nav-list">
+		<a href="/pages/grade-calc/">Grade Calculator</a>
+		<a href="/pages/recommended">Recommended</a>
+		<a href="/pages/resources">Resources</a>
+	</div>
 </body>
 </html>
