--- a/pages/resources.html
+++ b/pages/resources.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Pages / Resources</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/persia.css">
 </head>
 <body>
-<h1><a href="/">PaulW.XYZ</a> / <a href="/pages/">Pages</a> / Resources</h1>
-<hr>
+<h1 class="title"><a href="/">PaulW.XYZ</a> / <a href="/pages/">Pages</a> / Resources</h1>
+<section>
 <h2>Programming</h2>
 <ul>
 	<li><a href="http://aggregate.org/MAGIC/">The Aggregate Magic Algorithms</a></li>
@@ -37,5 +38,6 @@ The MIT License, Line by Line by Kyle E. Mitchell</a></li>
 <ul>
 	<li><a href="https://sightreading.training/">Sight Reading Trainer</a></li>
 </ul>
+</section>
 </body>
 </html>
