--- a/pages/grade-calc/index.html
+++ b/pages/grade-calc/index.html
@@ -5,17 +5,12 @@
     <meta name="Grade Calculator" content="School grade calculation">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/persia.css">
     <title>Grade Calc</title>
 </head>
 <style>
     * {
         box-sizing: border-box;
-    }
-
-    body {
-        padding: 0;
-        margin: 0;
-        font-family: sans-serif;
     }
 
     .about-container {
@@ -36,18 +31,9 @@
     }
 
     .button-container button {
-        border: 1px solid black;
-        border-radius: 0;
-        font-size: 1em;
-        text-align: center;
-        margin: .5rem 0;
         width: 100%;
-        padding: 0.5rem 1rem;
-        background-color: #90c541;
-        color: #FFF;
-        cursor: pointer;
     }
-
+    
     @media screen and (max-width: 900px) {
 
         .json-textarea,
@@ -58,9 +44,8 @@
 </style>
 
 <body>
+    <h1 class="title"><a href="/">PaulW.XYZ</a> / <a href="/pages/">Pages</a> / Grade Calculator</h1>
     <div class="about-container">
-        <h1><a href="/">PaulW.XYZ</a> / <a href="/pages/">Pages</a> / Grade Calculator</h1>
-        <hr>
         <h2>About</h2>
         Check out the <a href="https://github.com/lambdapaul/www/blob/master/pages/grade-calc/README.md">README.md</a> file
         to learn more about the configuration structure.
@@ -74,15 +59,16 @@
     </div>
     <div class="json-textarea">
         <h2>Configuration</h2>
+        <hr>
         <h3>Load config from file</h3>
         <ul>
-            <li><a href="javascript:void(0)" onclick="loadConfig('./config/map2302.json')">MAP2302 - ODE I Fall 2019</a>
-            </li>
-            <li><a href="javascript:void(0)" onclick="loadConfig('./config/eee3307c.json')">EEE3307C - Electronics I
-                    Spring 2021</a></li>
+            <li><a href="javascript:void(0)" onclick="loadConfig('./config/map2302.json')">MAP2302 - ODE I Fall 2019 (map2302.json)</a></li>
+            <li><a href="javascript:void(0)" onclick="loadConfig('./config/eee3307c.json')">EEE3307C - Electronics I Spring 2021 (eee3307c.json)</a></li>
+            <li><a href="javascript:void(0)" onclick="loadConfig('./config/eel4742c.json')">EEL4742C - Embedded Systems Spring 2021 (eel4742c.json)</a></li>
+            <li><a href="javascript:void(0)" onclick="loadConfig('./config/eel4781.json')">EEL4781 - Computer Comm. Networks Spring 2021 (eel4781.json)</a></li>
         </ul>
         <div class="button-container">
-            <button onclick="generate()">Generate &#8594;</button>
+            <button class="button" onclick="generate()">Generate &#8594;</button>
         </div>
         <textarea id="json" id="" rows="30"></textarea>
 
