--- a/pages/recommended.html
+++ b/pages/recommended.html
@@ -4,10 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Pages / Recommended</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/persia.css">
 </head>
 <body>
 <!-- This page is really for me to not forget/revisit the good things I have read, seen, heard, and/or experienced. This list may change, just as my opinions. -->
-<h1><a href="/">PaulW.XYZ</a> / <a href="/pages/">Pages</a> / Recommended</h1>
+<h1 class="title"><a href="/">PaulW.XYZ</a> / <a href="/pages/">Pages</a> / Recommended</h1>
+<section>
 <p>If the one you're looking for is not on this list, it is most likely I haven't had the chance to read it yet or I may have put it on the Resources page, if it is freely available.</p>
 <hr>
 <h2>Books</h2>
@@ -93,5 +95,6 @@
 	<li>The Legend of Zelda: Breath of the Wild</li>
 	<li>Portal 2</li>
 </ul>
+</section>
 </body>
 </html>
