Remove preset pages; force users to look pages up; fix bugs

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <a href="https://github.com/lambdapaul/www">Hosted on GitHub</a>
         &copy; 2021 Paul W.
     </footer>
-    <script src="/scripts/fuzzynav.js"></script>
+    <script src="/scripts/fuzzy.js"></script>
 </body>
 
 </html>
