Add readme to home, fuzzy search instruction and make UI a tad bit better

--- a/index.html
+++ b/index.html
@@ -72,8 +72,24 @@
 
         <h1 class="title">PaulW.XYZ</h1>
         <div class="fuzzynav">
-            <input class="search" type="text" id="search" placeholder="Navigate to ...">
-            <div id="results" class="results"></div>
+            <input class="search" type="text" id="search" placeholder="Go to ... (Try typing `help` or `?`)">
+            <div id="results" class="results">
+<p><strong>Using the search bar will clear this message and list responses based on your query.</strong></p>
+<p>This is a draft of the rationale behind writing pages the way I have. I do not like the traditional web conventions so this is where I experiment the most with interfacing elements. The navigation pane-based design works when they are simple and easy to understand. When they get too complex, people rely on using search bars to get where they want. My goal is to find a method to eliminate the visual noise of the complex navigation panes and find a reasonable alternative them while being easy to use. </p>
+<h2 id="page-categorization">Page Categorization</h2>
+<p>The home page or the index page solely acts as a gateway to all the other pages on the site.
+The accessible pages are categorized on a need-based system. Since I currently do not have multiple pages, I have them all under a single directory.</p>
+<h2 id="design-principles">Design Principles</h2>
+<p>The goal of my home page&rsquo;s design is to keep this minimal. There is no need for unnecessary content to waste people&rsquo;s time. The rule is simple: only waste one&rsquo;s time if they willingly do so.</p>
+<p>Modern webpages tend to be bulky. This entire site should retain the modern design while being as minimal and static as possible.</p>
+<ul>
+   <li>minimal: a page should not overly rely on programming logic unless the focus is programming logic</li>
+   <li>static: informational pages should not be dynamically changing as the focus is on the content itself</li>
+</ul> 
+<h3 id="design-problems">Design Problems</h3>
+<p>A new user would never understand how this site works.
+My ideal navigation system would involve having as few navigation elements as possible. This is the reason why I chose to add solely the fuzzy-search bar. However, I have not been able to find a good way to give users of my pages a good way to interact in case they do not use the search bar. I previously used to list them all but it was not easy on the eyes and looked lazy. Maybe a command system that does not use symbols (considering touch devices do not support non-Latin character insertions easily). Maybe something similar to *nix commands. The site somewhat vaguely follows the basic file-system structure. However, this goes against my goal of &ldquo;ease-of-use&rdquo; which is why I have not done it yet.</p>
+            </div>
         </div>
 
     </nav>
