--- a/pages/grade-calc/index.html
+++ b/pages/grade-calc/index.html
@@ -45,6 +45,7 @@
 
 <body>
     <h1 class="title"><a href="/">PaulW.XYZ</a> / <a href="/pages/">Pages</a> / Grade Calculator</h1>
+    <div class="block">
     <div class="about-container">
         <h2>About</h2>
         Check out the <a href="https://github.com/lambdapaul/www/blob/master/pages/grade-calc/README.md">README.md</a> file
@@ -74,6 +75,7 @@
 
     </div>
     <div class="calculator-container">
+    </div><span class="clear"></span>
     </div>
     <script type="text/javascript" src="gc_client.js"></script>
     <script>
