--- a/pages/recommended.html
+++ b/pages/recommended.html
@@ -9,7 +9,7 @@
 <body>
 <!-- This page is really for me to not forget/revisit the good things I have read, seen, heard, and/or experienced. This list may change, just as my opinions. -->
 <h1 class="title"><a href="/">PaulW.XYZ</a> / <a href="/pages/">Pages</a> / Recommended</h1>
-<section>
+<section class="block">
 <p>If the one you're looking for is not on this list, it is most likely I haven't had the chance to read it yet or I may have put it on the Resources page, if it is freely available.</p>
 <hr>
 <h2>Books</h2>
