--- a/pages/resources.html
+++ b/pages/resources.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1 class="title"><a href="/">PaulW.XYZ</a> / <a href="/pages/">Pages</a> / Resources</h1>
-<section>
+<section class="block">
 <h2>Programming</h2>
 <ul>
 	<li><a href="http://aggregate.org/MAGIC/">The Aggregate Magic Algorithms</a></li>
