--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,7 @@
 	</nav>
 	<div class="nav-list">
 		<a href="/pages/grade-calc/">Grade Calculator</a>
+		<a href="/pages/playlists">Playlists</a>
 		<a href="/pages/recommended">Recommended</a>
 		<a href="/pages/resources">Resources</a>
 	</div>
